# LifeOS

./: .gitignore  README.md  pyproject.toml  test_db.py
src/: main.py
src/lifeos/: db.py  models.py  run_task_agent.py
src/lifeos/lifeos_agents/: task_agent.py
src/lifeos/tools/: tasks.py
